--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,6 @@ body {
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   padding: 1rem;
   width: 200px;
-  border-radius: 20px;
 }
 @media (max-width: 768px) {
   .menu {
@@ -124,8 +123,58 @@ body {
 .video-card .video-info {
   margin-top: 1rem;
 }
-.video-card .video-info h3, .video-card .video-info p {
+.video-card .video-info h3,
+.video-card .video-info p {
   margin: 0;
+}
+
+#tituloVideo {
+  font-size: 20px;
+}
+
+#descripcionVideo {
+  font-size: 10px;
+}
+
+.player {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+}
+
+#player {
+  width: 80%;
+  max-width: 800px;
+  height: 450px;
+}
+
+.video-list ul {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  padding: 0;
+}
+.video-list li {
+  list-style: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  padding: 10px;
+  border-radius: 5px;
+  transition: background 0.3s;
+}
+.video-list li:hover {
+  background: #d7cbcb;
+}
+.video-list li img.thumbnail {
+  width: 200px;
+  height: auto;
+  border-radius: 5px;
 }
 
 .player-bar {
@@ -135,11 +184,9 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.18);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   position: fixed;
-  bottom: 20px;
+  bottom: 0%;
   left: 50%;
-  transform: translateX(-50%);
   padding: 1rem;
-  display: flex;
   gap: 1rem;
 }
 .player-bar button {
