--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -38,13 +38,13 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+
 }
 
 .search-container {
     flex-grow: 1;
     display: flex;
-    justify-content: center; 
+    justify-content: center;
     margin: 0 2rem;
 }
 
@@ -55,6 +55,7 @@ body {
     padding: 0.5rem 1rem; // Más padding horizontal
     width: 100%; // Ancho completo del contenedor
     max-width: 600px; // Ancho máximo de la barra de búsqueda
+
     &::placeholder {
         color: rgba(255, 255, 255, 0.7);
     }
@@ -64,46 +65,50 @@ body {
     display: flex;
     flex-grow: 1;
     gap: 2rem;
+
     @media (max-width: 768px) {
-      flex-direction: column;
-      gap: 1rem;
-  }
+        flex-direction: column;
+        gap: 1rem;
+    }
 }
 
 .menu {
-  @include glassmorphism;
-  padding: 1rem;
-  width: 200px;
+    @include glassmorphism;
+    padding: 1rem;
+    width: 200px;
 
-  @media (max-width: 768px) {
-    width: 100%; // Menú ocupa todo el ancho en móviles
-    display: none; // Oculto por defecto en móviles
-    &.is-active {
-        display: block; // Visible cuando se activa
+    @media (max-width: 768px) {
+        width: 100%; // Menú ocupa todo el ancho en móviles
+        display: none; // Oculto por defecto en móviles
+
+        &.is-active {
+            display: block; // Visible cuando se activa
+        }
     }
-  }
 
-  .menu-title {
-      color: $menu-title-color;
-      font-weight: bold; 
-  }
-  border-radius: 20px;
-  ul.menu-list {
-      li {
-          margin-bottom: 1rem;
-          
-          a {
-              color: white;
-              border-radius: 8px;
-              &:hover {
-                box-shadow: inset 6px 6px 12px $shadow-dark, inset -6px -6px 12px $shadow-light;
-              }
-              &.is-active {
-                  background: rgba(255, 255, 255, 0.2);
-              }
-          }
-      }
-  }
+    .menu-title {
+        color: $menu-title-color;
+        font-weight: bold;
+    }
+
+    ul.menu-list {
+        li {
+            margin-bottom: 1rem;
+
+            a {
+                color: white;
+                border-radius: 8px;
+
+                &:hover {
+                    box-shadow: inset 6px 6px 12px $shadow-dark, inset -6px -6px 12px $shadow-light;
+                }
+
+                &.is-active {
+                    background: rgba(255, 255, 255, 0.2);
+                }
+            }
+        }
+    }
 }
 
 .video-section {
@@ -111,9 +116,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+
     @media (max-width: 768px) {
-      padding: 1rem;
-  }
+        padding: 1rem;
+    }
 }
 
 .video-card {
@@ -121,14 +127,72 @@ body {
     padding: 1rem;
     max-width: 800px; // Ancho máximo del video
     width: 100%;
+
     video {
         width: 100%;
         border-radius: $border-radius;
     }
+
     .video-info {
         margin-top: 1rem;
-        h3, p {
+
+        h3,
+        p {
             margin: 0;
+        }
+    }
+}
+
+#tituloVideo {
+    font-size: 20px;
+}
+
+ #descripcionVideo {
+    font-size: 10px;
+ }
+
+.player {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%; // Asegura que el contenedor tenga altura
+    width: 100%; // O un ancho específico si es necesario
+    background-color: black;
+}
+
+#player {
+    width: 80%; // Ajusta según necesites
+    max-width: 800px; // Evita que se haga demasiado grande
+    height: 450px; // Ajusta según necesites
+}
+
+.video-list {
+    ul {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); // 2 columnas de igual tamaño
+        gap: 10px;
+        padding: 0;
+    }
+
+    li {
+        list-style: none;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        padding: 10px;
+        border-radius: 5px;
+        transition: background 0.3s;
+
+        &:hover {
+            background: #d7cbcb;
+        }
+
+        img.thumbnail {
+            width: 200px; // La imagen ocupará todo el ancho de su celda
+            height: auto;
+            border-radius: 5px;
         }
     }
 }
@@ -136,12 +200,11 @@ body {
 .player-bar {
     @include glassmorphism;
     position: fixed;
-    bottom: 20px;
+    bottom: 0%;
     left: 50%;
-    transform: translateX(-50%);
     padding: 1rem;
-    display: flex;
     gap: 1rem;
+
     button {
         background: none;
         border: none;
