--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -147,9 +147,9 @@ body {
     font-size: 20px;
 }
 
- #descripcionVideo {
+#descripcionVideo {
     font-size: 10px;
- }
+}
 
 .player {
     display: flex;
@@ -211,5 +211,92 @@ body {
         color: white;
         font-size: 1.5rem;
         cursor: pointer;
+    }
+}
+
+.carousel {
+    position: relative;
+    max-width: 900px; // Ajusta el ancho del carrusel
+    margin: auto;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+    transform: none !important;
+
+    .carousel-inner {
+        display: flex;
+    align-items: center;
+    height: 500px; // Ajusta el tamaño según lo necesites
+        border-radius: 15px;
+    }
+
+    .carousel-item {
+        transform: none !important;
+        transition: none !important; // Quita cualquier animación de transformación
+        
+    height: 100%;
+    width: 100%;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; // Prueba también con 'cover' si prefieres que llene el contenedor
+            transition: none !important;
+        }
+
+        &.active img {
+            filter: brightness(100%);
+        }
+    }
+
+    .carousel-caption {
+        @include glassmorphism;
+        padding: 1rem;
+        bottom: 15%;
+        border-radius: 10px;
+        color: white;
+        text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.7);
+        animation: fadeInUp 0.8s ease-in-out;
+
+        h5 {
+            font-size: 1.5rem;
+            font-weight: 600;
+        }
+
+        p {
+            font-size: 1rem;
+        }
+    }
+
+    .carousel-indicators {
+        button {
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            background: rgba(255, 255, 255, 0.5);
+            transition: background 0.3s ease-in-out;
+
+            &.active {
+                background: white;
+                width: 14px;
+                height: 14px;
+            }
+        }
+    }
+
+    .carousel-control-prev,
+    .carousel-control-next {
+        filter: brightness(70%);
+        transition: filter 0.3s;
+
+        &:hover {
+            filter: brightness(100%);
+        }
+
+        span {
+            background-color: rgba(0, 0, 0, 0.4);
+            padding: 10px;
+            border-radius: 50%;
+        }
     }
 }
